
Version 2.06  2010-12-09
 * sync file op: do not sync the file which exists on dest storage server
   and the file size are same 
 * bug fixed: sync copy file will clear the existed file on dest storage
   server (truncate the file size to 0), this bug caused by V2.04

Version 2.05  2010-12-05
 * client/fdfs_monitor.c: add sync delay time
 * tracker/fast_task_queue.c: pTask->data = pTask->arg + arg_size; 
   change to: pTask->data = (char *)pTask->arg + arg_size;
 * bug fixed: storage_sync.c line 237 cause core dump in Ubuntu 10.04
 * upload file test use mmap, support more test_upload processes
 * client add three tools: fdfs_upload_file, fdfs_download_file and 
   fdfs_delete_file

Version 2.04  2010-11-19
 * storage.conf: tracker server ip can NOT be 127.0.0.1
 * do not catch signal SIGABRT
 * strerror change to STRERROR macro
 * sync copy file use temp filename first, rename to the correct filename 
   when sync done
 * file id use 4 bytes CRC32 signature instead of random number
 * add file: client/fdfs_crc32.c
 * one of file hash code signature function change from APHash_ex 
   to simple_hash_ex
 * bug fixed: when fdfs_storaged quit, maybe write to binlog file fail,
   the error info is "Bad file descriptor"

Version 2.03  2010-11-08
 * bug fixed: core dump when http.need_find_content_type=false and 
   http.anti_steal.check_token=true
 * storage server add join_time field (create timestamp of this storage)
 * tracker server fetch system files from other tracker server when 
   first storage server join in (tracker to tracker sync system files)
 * tracker server changes the old ip address to the new address when the 
   storage server ip address changed
 * tracker to tracker sync system data files in some case, multi tracker
   server supported well

Version 2.02  2010-10-28
 * get parameters function from tracker server changed, 
   add paramter: storage_sync_file_max_delay
 * local ip functions move to common/local_ip_func.c